# rust-playground

./: Cargo.toml  README.md  dependency-injection-example.rs  hello-http-client.rs  hello-world  hello.proto  makefile
my_attribute/: Cargo.toml
my_attribute/src/: lib.rs
server/: handlers.rs  main.rs  middleware.rs  routes.rs
